Handle out of memory error while creating an error message in the literal parser. https://bugs.webkit.org/show_bug.cgi?id=214313 <rdar://problem/65031745>

Reviewed by Saam Barati.

JSTests:

* stress/out-of-memory-making-error-string-in-literal-parser.js: Added.

Source/JavaScriptCore:

* runtime/LiteralParser.cpp:
(JSC::LiteralParser<CharType>::parse):



Canonical link: https://commits.webkit.org/227133@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264379 268f45cc-cd09-0410-ab3c-d52691b4dbfc